--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 
 Lecture Content/ElseIf.c
+
+Lecture Content/IntroWhile
+
+Lecture Content/SumWhile
+
+Lecture Content/CounterWhile
+
+Lab 5 (Oct 23)/.DS_Store
