--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ Lecture Content/SumWhile
 Lecture Content/CounterWhile
 
 Lab 5 (Oct 23)/.DS_Store
+
+Lab 6 (Oct 30)/.DS_Store
+
+Lab 8 (Nov 13)/.DS_Store
+
+Lab 2 (Oct 2)/Question3 (conflict at 2012-10-02_08-33-57).c
+
+Lab 2 (Oct 2)/Question3 (conflict at 2012-10-02_09-33-57).c
