--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ Lab 8 (Nov 13)/.DS_Store
 Lab 2 (Oct 2)/Question3 (conflict at 2012-10-02_08-33-57).c
 
 Lab 2 (Oct 2)/Question3 (conflict at 2012-10-02_09-33-57).c
+
+Lab 9 (Nov 20)/.DS_Store
